feat: syncjob 연동 로직 보완 및 open-api 설정(application.yaml) 추가